k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hustgo
  labels:
    app.kubernetes.io/part-of: hustgo-platform
