k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: hustgo
  labels:
    app: api-gateway
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: asia-northeast1-docker.pkg.dev/hustgo-492614/hustgo/api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9191
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          startupProbe:
            tcpSocket:
              port: 9191
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 150
          readinessProbe:
            tcpSocket:
              port: 9191
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9191
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: hustgo
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 9191
      targetPort: 9191
      protocol: TCP
      name: http
  selector:
    app: api-gateway
