k8s/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: hustgo
  labels:
    app: config-server
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: asia-northeast1-docker.pkg.dev/hustgo-492614/hustgo/config-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          startupProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 150
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: hustgo
  labels:
    app: config-server
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: config-server
