k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: hustgo
  labels:
    app: kafka
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: kafka
          image: bitnamilegacy/kafka:3.7.0
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          startupProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 150
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: hustgo
  labels:
    app: kafka
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
      protocol: TCP
  selector:
    app: kafka
