k8s/osrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm
  namespace: hustgo
  labels:
    app: osrm
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: osrm
  template:
    metadata:
      labels:
        app: osrm
    spec:
      containers:
        - name: osrm
          image: osrm/osrm-backend:latest
          command:
            - osrm-routed
            - --algorithm
            - mld
            - /data/hanoi-latest.osrm
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: osrm-data
              mountPath: /data
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
      volumes:
        - name: osrm-data
          persistentVolumeClaim:
            claimName: osrm-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: osrm
  namespace: hustgo
  labels:
    app: osrm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: osrm
