k8s/service-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  namespace: hustgo
  labels:
    app: service-registry
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: asia-northeast1-docker.pkg.dev/hustgo-492614/hustgo/service-registry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          startupProbe:
            tcpSocket:
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 150
          readinessProbe:
            tcpSocket:
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8761
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: hustgo
  labels:
    app: service-registry
spec:
  type: ClusterIP
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
      name: http
  selector:
    app: service-registry
