k8s/tracking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service
  namespace: hustgo
  labels:
    app: tracking-service
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
        - name: tracking-service
          image: asia-northeast1-docker.pkg.dev/hustgo-492614/hustgo/tracking-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          startupProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 150
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
  namespace: hustgo
  labels:
    app: tracking-service
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: http
  selector:
    app: tracking-service
