k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hustgo-ingress
  namespace: hustgo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # WebSocket support
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    # SSL/TLS cert-manager
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hustgo.id.vn
      secretName: hustgo-tls-secret
  rules:
    - host: hustgo.id.vn
      http:
        paths:
          # API Gateway
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9191
          # Web socket
          - path: /ws-notifications
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9191
          # Frontend 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
